tests/runtime/invalid/imports.wit
roundtrip-u8: func(a: u8) -> u8
roundtrip-s8: func(a: s8) -> s8
roundtrip-u16: func(a: u16) -> u16
roundtrip-s16: func(a: s16) -> s16
roundtrip-char: func(a: char) -> char

enum e { a, b, c }
roundtrip-enum: func(a: e) -> e

roundtrip-bool: func(a: bool) -> bool

resource host-state
get-internal: func(a: host-state) -> u32
